package alliswell.pattern.behavior.command.switchdemo;

/**
 * TODO 功能描述
 *
 * @author chengxs
 * @date 2020/11/4
 */
interface Command {
    void execute();
}
